--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="position-relative h-100">
               <img
                 class="position-absolute w-100 h-100"
-                src="img/about.jpg"
+                src="img/about.JPG"
                 style="object-fit: cover"
               />
             </div>
