--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
             id="navbarCollapse"
           >
             <div class="navbar-nav ml-auto py-0">
-              <a href="" class="nav-item nav-link active">About</a>
-              <a href="" class="nav-item nav-link">Education</a>
-              <a href="" class="nav-item nav-link">Project</a>
-              <a href="" class="nav-item nav-link">Skills</a>
+              <a href="#about_me" class="nav-item nav-link">About</a>
+              <a href="#education" class="nav-item nav-link">Education</a>
+              <a href="#projects" class="nav-item nav-link">Project</a>
+              <a href="#skills" class="nav-item nav-link">Skills</a>
             </div>
           </div>
         </nav>
@@ -83,26 +83,37 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="w-100" src="img/test1.jpg" alt="Image" />
+            <img class="w-100" src="img/b.jpg" />
             <div
               class="carousel-caption d-flex flex-column align-items-center justify-content-center"
             >
               <div class="p-3" style="max-width: 900px">
                 <h3 class="display-3 text-white mb-md-4">Kim seongmin</h3>
-                <h3 class="text-white text-uppercase mb-md-3">Data Analyst</h3>
+                <h3 class="text-white mb-md-3">Data Analyst</h3>
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="w-100" src="img/test2.jpg" alt="Image" />
+            <img class="w-100" src="img/a.jpg" />
             <div
               class="carousel-caption d-flex flex-column align-items-center justify-content-center"
             >
               <div class="p-3" style="max-width: 900px">
-                <h3 class="display-3 text-white mb-md-4">
-                  gorrhtn @ naver.com
-                </h3>
-                <h3 class="text-white text-uppercase mb-md-3">010-7759-6905</h3>
+                <h3 class="display-3 text-white mb-md-4">"열정과 노력"</h3>
+                <p class="text-white mb-md-3">
+                  <br />
+                  <br />
+                  꿈을 이루지 못한 사람은 '나는 재능이 없어' 라고 말한다.<br />
+                  꿈을 이루지 못한 이유가 재능이 없었다는 것이라면<br />
+                  꿈을 이룬 사람들은 모두 '재능이 있었다' 라고 대답하는 것이
+                  맞겠지만,<br />
+                  성공한 사람 중에 그런 대답을 한 사람은 한명도 없다.<br /><br />
+
+                  <b
+                    >꿈을 이룬 사람들은 정말로 하고 싶었던 일을 <br />
+                    '열정' 을 가지고 계속했을 뿐이다.</b
+                  >
+                </p>
               </div>
             </div>
           </div>
@@ -113,7 +124,10 @@
           href="#header-carousel"
           data-slide="prev"
         >
-          <div class="btn btn-dark" style="width: 45px; height: 45px">
+          <div
+            class="btn btn-outline-secondary"
+            style="width: 45px; height: 45px"
+          >
             <span class="carousel-control-prev-icon mb-n2"></span>
           </div>
         </a>
@@ -122,7 +136,10 @@
           href="#header-carousel"
           data-slide="next"
         >
-          <div class="btn btn-dark" style="width: 45px; height: 45px">
+          <div
+            class="btn btn-outline-secondary"
+            style="width: 45px; height: 45px"
+          >
             <span class="carousel-control-next-icon mb-n2"></span>
           </div>
         </a>
@@ -131,8 +148,8 @@
     <!-- Carousel End -->
 
     <!-- About Start -->
-    <div class="container-fluid py-5">
-      <div class="container pt-5">
+    <div id="about_me" class="container-fluid py-5">
+      <div class="container">
         <div class="row">
           <div class="col-lg-6" style="min-height: 500px">
             <div class="position-relative h-100">
@@ -147,33 +164,36 @@
           <div class="col-lg-6 pt-5 pb-lg-5">
             <div class="about-text bg-white p-4 p-lg-5 my-lg-5">
               <h1
-                class="text-primary text-uppercase"
+                class="text-primary text-uppercase py-5"
                 style="letter-spacing: 5px"
               >
                 About Me
               </h1>
-              <h3 class="mb-3">열정과 노력</h3>
+              <h4 class="mb-3 py-3">
+                "팀원과의 소통"을 가장 중요시 생각하는 <br />신입 (데이터
+                분석가) / (개발자) 김성민입니다.
+              </h4>
               <p>
-                꿈을 이루지 못한 사람은 '나는 재능이 없어'라고 말한다.<br />
-                꿈을 이루지 못한 이유가 재능이 없었다는 것이라면<br />
-                꿈을 이룬 사람들은 모두 '재능이 있었다'라고 대답하는 것이
-                맞겠지만,<br />
-                성공한 사람 중에 그런 대답을 한 사람은 한명도 없다.<br /><br />
-
-                <b
-                  >꿈을 이룬 사람들은 정말로 하고 싶었던 일을 <br />
-                  '열정'을 가지고 계속했을 뿐이다.</b
-                >
+                대외 공모전, 교육기관의 프로젝트를 진행해본 경험이 있습니다.<br />
+                이러한 경험을 바탕으로 효율적인 작업과, 창의적이고 우수한
+                결과물이 나오기 위해선 팀원과의 지속적인
+                <b style="color: red">'소통'</b>이 명확한 목표설정을 만든다고
+                생각합니다.<br />
+                이후로도 개개인의 특성에 맞춘 업무 분담에 의한
+                <b style="color: red">'협력'</b>으로 이어지고, 이로인해
+                <b style="color: red">'신뢰'</b>를 쌓을 수 있다고 느꼈습니다.<br />
+                저 혼자만의 발전을 추구하기보다 제가 속한 조직의 공동의 발전으로
+                인한 결과물에 큰 성취감을 느끼며 서로가 항상 좋은 시너지를
+                받으며 일하고 싶습니다.
               </p>
               <div class="row mb-4">
                 <div class="col-6">
-                  <img class="img-fluid" src="img/two.jpg" alt="" />
+                  <img class="img-fluid" src="img/two.jpg" />
                 </div>
                 <div class="col-6">
-                  <img class="img-fluid" src="img/one.jpg" alt="" />
+                  <img class="img-fluid" src="img/one.jpg" />
                 </div>
               </div>
-              <!-- <a href="" class="btn btn-primary mt-1">Image</a> -->
             </div>
           </div>
         </div>
@@ -181,12 +201,15 @@
     </div>
     <!-- About End -->
 
+    <!-- 단락 구분** -->
+    <div class="h4 pt-2 text-danger border-bottom border-primary"></div>
+
     <!-- Education Start -->
     <div id="education">
-      <h1 class="text-primary text-uppercase" style="letter-spacing: 5px">
+      <h1 class="text-primary text-uppercase pb-5" style="letter-spacing: 5px">
         Education
       </h1>
-      <div class="education-block">
+      <div class="education-block" style="background-color: white">
         <h3>강원대학교 춘천캠퍼스</h3>
         <span class="education-date">March 2015 - February 2019</span>
         <h4>전기전자공학부</h4>
@@ -194,9 +217,14 @@
           <li>2015 - 입학</li>
           <li>2019 - 수료</li>
         </ul>
+        <br />
+        <p>
+          프로그래밍 언어(C, Java, R), 자료구조, 운영체제, 임베디드 시스템,
+          orcad 등을 사용해보았습니다.
+        </p>
       </div>
       <!-- End .education-block -->
-      <div class="education-block">
+      <div class="education-block" style="background-color: white">
         <h3>알파코캠퍼스</h3>
         <span class="education-date">October 2022 - March 2023</span>
         <h4>알파코캠퍼스 부트캠프 4기</h4>
@@ -213,120 +241,173 @@
     </div>
     <!-- End #education -->
 
-    <!-- Project Start -->
-    <div class="container-fluid py-5">
-      <div class="container pt-5 pb-3">
-        <div class="text-center mb-3 pb-3">
-          <h1 class="text-primary text-uppercase" style="letter-spacing: 5px">
-            Project
-          </h1>
-        </div>
+    <!-- 단락 구분** -->
+    <div class="h4 pt-2 text-danger border-bottom border-primary"></div>
 
-        <!-- Project Image & File Strat -->
+    <!-- 프로젝트 시작 -->
+    <div id="projects">
+      <div class="text-center mb-3">
+        <h1
+          class="text-primary text-uppercase pb-5"
+          style="letter-spacing: 5px"
+        >
+          Project
+        </h1>
+      </div>
+
+      <div class="container">
         <div class="row">
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="service-item bg-white text-center mb-2">
-              <div
-                class="destination-item position-relative overflow-hidden mb-3"
-              >
-                <img class="img-fluid" src="img/Project_1.jpg" alt="" />
-                <a
-                  class="destination-overlay text-white text-decoration-none"
-                  href=""
-                >
-                </a>
-              </div>
-              <h5 class="mb-2">
-                <b>철강 공장 제조 <br />데이터 분석</b>
-              </h5>
-              <div class="border-top">
-                <p class="m-2">
-                  철강 공장 제조 덤프 데이터를 통한 데이터를 분석 및 시각화를
-                  실시하고 ML을 통하여 솔루션을 도출
-                </p>
-              </div>
+          <div class="project shadow-large">
+            <div
+              class="destination-item position-relative overflow-hidden"
+              style="float: left"
+            >
+              <img
+                src="img/Project_2.jpg"
+                style="width: 300px; height: 300px"
+              />
             </div>
+            <!-- End .project-image -->
+            <div class="project-info">
+              <h3 class="py-3">지능형 모형차 경진대회</h3>
+              <p>
+                임베디드 시스템을 이용한 자율주행
+                모형차ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ
+              </p>
+              <a
+                href="project_template/RPA_4기_프로젝트2+3.pdf"
+                download="Joo_project_2+3.pdf"
+                >View Project</a
+              ><br />
+              <a href="">View Code</a>
+            </div>
+            <!-- End .project-info -->
+          </div>
+          <!-- End .project -->
+
+          <div class="project" style="background-color: white">
+            <div
+              class="destination-item position-relative overflow-hidden"
+              style="float: left"
+            >
+              <img
+                src="img/Project_1.jpg"
+                style="width: 300px; height: 300px"
+              />
+            </div>
+            <!-- End .project-image -->
+            <div class="project-info">
+              <h3 class="py-3">철강 공장 제조 데이터 분석</h3>
+              <p>
+                철강 공장 제조 덤프 데이터를 통한 데이터를 분석 및 시각화를
+                실시하고 ML을 통하여 솔루션을 도출
+              </p>
+              <a
+                href="project_template/RPA_4기_프로젝트1.pdf"
+                download="Joo_project_1.pdf"
+                >View Project</a
+              ><br />
+              <a href="">View Code</a>
+            </div>
+            <!-- End .project-info -->
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="service-item bg-white text-center mb-2">
-              <div
-                class="destination-item position-relative overflow-hidden mb-3"
-              >
-                <img class="img-fluid" src="img/Project_2.jpg" alt="" />
-                <a
-                  class="destination-overlay text-white text-decoration-none"
-                  href=""
-                >
-                </a>
-              </div>
-              <h5 class="mb-2">
-                <b>데이터 분석 프로젝트 <br />비지니스 문제해결</b>
-              </h5>
-              <div class="border-top">
-                <p class="m-2">
-                  육아용품 쇼핑몰 데이터를 분석하여 시각화를 진행한 후 현
-                  쇼핑몰의 문제점을 찾고 ML을 통하여 솔루션을 도출
-                </p>
-              </div>
+          <!-- End .project -->
+          <div class="project shadow-large">
+            <div
+              class="destination-item position-relative overflow-hidden"
+              style="float: left"
+            >
+              <img
+                src="img/Project_2.jpg"
+                style="width: 300px; height: 300px"
+              />
             </div>
+            <!-- End .project-image -->
+            <div class="project-info">
+              <h3 class="py-3">데이터 분석 프로젝트 비지니스 문제해결</h3>
+              <p>
+                육아용품 쇼핑몰 데이터를 분석하여 시각화를 진행한 후 현 쇼핑몰의
+                문제점을 찾고 ML을 통하여 솔루션을 도출
+              </p>
+              <a
+                href="project_template/RPA_4기_프로젝트2+3.pdf"
+                download="Joo_project_2+3.pdf"
+                >View Project</a
+              ><br />
+              <a href="">View Code</a>
+            </div>
+            <!-- End .project-info -->
           </div>
+          <!-- End .project -->
 
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="service-item bg-white text-center mb-2">
-              <div
-                class="destination-item position-relative overflow-hidden mb-3"
-              >
-                <img class="img-fluid" src="img/Project_3.png" alt="" />
-                <a
-                  class="destination-overlay text-white text-decoration-none"
-                  href=""
-                >
-                </a>
-              </div>
-              <h5 class="mb-2"><b>데이터 기반 문제해결 프로젝트</b></h5>
-              <div class="border-top">
-                <p class="m-2">
-                  노인 복지 관련 공공데이터를 수집하고 데이터를 분석 및
-                  시각화하여 문제점을 도출 ML을 통하여 문제점에 대한 솔루션을
-                  도출
-                </p>
-              </div>
+          <div class="project shadow-large">
+            <div
+              class="destination-item position-relative overflow-hidden"
+              style="float: left"
+            >
+              <img
+                src="img/Project_3.png"
+                style="width: 300px; height: 300px"
+              />
             </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="service-item bg-white text-center mb-2">
-              <div
-                class="destination-item position-relative overflow-hidden mb-3"
-              >
-                <img class="img-fluid" src="img/Project_4.jpg" alt="" />
-                <a
-                  class="destination-overlay text-white text-decoration-none"
-                  href=""
-                >
-                </a>
-              </div>
-              <h5 class="mb-2"><b>웹 어플리케이션 구현</b></h5>
-              <div class="border-top">
-                <p class="m-2">
-                  Django를 이용한 웹 어플리케이션 구현 로그인 및 유저 관리
-                  시스템을 구축하고 'MISS_U'라는 맞춤형 음악 재생 웹
-                  어플리케이션 컨셉트에 맞는 게시판을 구성
-                </p>
-              </div>
+            <!-- End .project-image -->
+            <div class="project-info">
+              <h3 class="py-3">데이터 기반 문제해결 프로젝트</h3>
+              <p>
+                노인 복지 관련 공공데이터를 수집하고 데이터를 분석 및 시각화하여
+                문제점을 도출 ML을 통하여 문제점에 대한 솔루션을 도출
+              </p>
+              <a
+                href="project_template/RPA_4기_프로젝트4.pdf"
+                download="Joo_project_4.pdf"
+                >View Project</a
+              ><br />
+              <a href="">View Code</a>
             </div>
+            <!-- End .project-info -->
           </div>
-          <!-- Project Image & File End -->
+          <!-- End .project -->
+          <div class="project shadow-large">
+            <div
+              class="destination-item position-relative overflow-hidden"
+              style="float: left"
+            >
+              <img
+                src="img/Project_4.jpg"
+                style="width: 300px; height: 300px"
+              />
+            </div>
+            <!-- End .project-image -->
+            <div class="project-info">
+              <h3 class="py-3">웹 어플리케이션 구현</h3>
+              <p>
+                Django를 이용한 웹 어플리케이션 구현 로그인 및 유저 관리
+                시스템을 구축하고 'MISS_U'라는 맞춤형 음악 재생 웹 어플리케이션
+                컨셉트에 맞는 게시판을 구성
+              </p>
+              <a
+                href="project_template/RPA_4기_프로젝트5.pdf"
+                download="Joo_project_5.pdf"
+                >View Project</a
+              ><br />
+              <a href="">View Code</a>
+            </div>
+            <!-- End .project-info -->
+          </div>
+          <!-- End .project -->
         </div>
       </div>
     </div>
-    <!-- Project End -->
+    <!-- End #projects -->
+
+    <!-- 단락 구분** -->
+    <div class="h4 pt-2 text-danger border-bottom border-primary"></div>
 
     <!-- Footer Start -->
     <div id="skills">
-      <div class="container-fluid py-5">
-        <div class="container pt-5 pb-3">
+      <div class="container-fluid pb-5">
+        <div class="container pb-3">
           <div class="text-center mb-3 pb-3">
             <h1 class="text-primary text-uppercase" style="letter-spacing: 5px">
               Skills
