--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
         </p>
       </div>
       <!-- End .education-block -->
+      
       <div class="education-block" style="background-color: white">
         <h3>알파코캠퍼스</h3>
         <span class="education-date">October 2022 - March 2023</span>
@@ -235,6 +236,22 @@
           <li>2023 01 - Python(Django)을 이용한 웹 구성하기</li>
           <li>2023 02 - Python(Django)을 이용한 웹 구성하기</li>
           <li>2023 03 - UI-Path를 이용한 RPA프로그래밍</li>
+        </ul>
+        <br>
+        <p>Python, 웹 크롤링, SQL,
+          <br>웹 프로그래밍을 위한 HTML, CSS, JavaScript 등의 단계별 기초교육을 받았습니다.</p>
+      </div>
+      <!-- End .education-block -->
+      
+      <div class="education-block">
+        <h3>데이콘</h3>
+        <span class="education-date">March 25, 2023 - April 15, 2023</span><br>
+        <h5>(데이스쿨 5기)</h5>
+        <ul>
+          <li>1주차 - 오리엔테이션, 보스턴 집값 예측문제</li>
+          <li>2주차 - 보스턴 집값 예측문제, 아파트 경매 값 예측 문제</li>
+          <li>3주차 - 아파트 경매 값 예측 문제, ChatGPT</li>
+          <li>4주차 - 아파트 경매 값 예측 해커톤</li>
         </ul>
       </div>
       <!-- End .education-block -->
