--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       </div>
       <!-- End .education-block -->
       
-      <div class="education-block">
+      <div class="education-block style="background-color: white">
         <h3>데이콘</h3>
         <span class="education-date">March 25, 2023 - April 15, 2023</span><br>
         <h5>(데이스쿨 5기)</h5>
