--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
               style="float: left"
             >
               <img
-                src="img/Project_2.jpg"
+                src="img/pid.jpg"
                 style="width: 300px; height: 300px"
               />
             </div>
@@ -289,7 +289,7 @@
               <h3 class="py-3">지능형 모형차 경진대회</h3>
               <p>
                 임베디드 시스템을 이용한 자율주행
-                모형차ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ
+                모형차 (eclipse tool을 사용하여 제어)
               </p>
               <a
                 href="project_template/RPA_4기_프로젝트2+3.pdf"
