--- a/index.html
+++ b/index.html
@@ -243,16 +243,20 @@
       </div>
       <!-- End .education-block -->
       
-      <div class="education-block style="background-color: white">
+      <div class="education-block" style="background-color: white">
         <h3>데이콘</h3>
         <span class="education-date">March 25, 2023 - April 15, 2023</span><br>
-        <h5>(데이스쿨 5기)</h5>
+        <h4>(데이스쿨 5기)</h4>
         <ul>
           <li>1주차 - 오리엔테이션, 보스턴 집값 예측문제</li>
           <li>2주차 - 보스턴 집값 예측문제, 아파트 경매 값 예측 문제</li>
           <li>3주차 - 아파트 경매 값 예측 문제, ChatGPT</li>
           <li>4주차 - 아파트 경매 값 예측 해커톤</li>
         </ul>
+        <br>
+        <p>파이썬을 통한 데이터 필터링, 
+          <br> 회귀분석을 해보았습니다.
+        </p>
       </div>
       <!-- End .education-block -->
     </div>
