--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       <div class="education-block" style="background-color: white">
         <h3>데이콘</h3>
         <span class="education-date">March 25, 2023 - April 15, 2023</span><br>
-        <h4>(데이스쿨 5기)</h4>
+        <h4>데이스쿨 5기</h4>
         <ul>
           <li>1주차 - 오리엔테이션, 보스턴 집값 예측문제</li>
           <li>2주차 - 보스턴 집값 예측문제, 아파트 경매 값 예측 문제</li>
@@ -296,8 +296,8 @@
                 모형차 (eclipse tool을 사용하여 제어)
               </p>
               <a
-                href="project_template/RPA_4기_프로젝트2+3.pdf"
-                download="Joo_project_2+3.pdf"
+                href="project_template/conected_car.pptx"
+                download="SM_project_car.pptx"
                 >View Project</a
               ><br />
               <a href="">View Code</a>
@@ -324,8 +324,8 @@
                 실시하고 ML을 통하여 솔루션을 도출
               </p>
               <a
-                href="project_template/RPA_4기_프로젝트1.pdf"
-                download="Joo_project_1.pdf"
+                href="project_template/steel.pdf"
+                download="SM_project_steel.pdf"
                 >View Project</a
               ><br />
               <a href="">View Code</a>
@@ -352,8 +352,8 @@
                 문제점을 찾고 ML을 통하여 솔루션을 도출
               </p>
               <a
-                href="project_template/RPA_4기_프로젝트2+3.pdf"
-                download="Joo_project_2+3.pdf"
+                href="project_template/shoppingmall.pdf"
+                download="SM_project_shoppingmall.pdf"
                 >View Project</a
               ><br />
               <a href="">View Code</a>
@@ -380,8 +380,8 @@
                 문제점을 도출 ML을 통하여 문제점에 대한 솔루션을 도출
               </p>
               <a
-                href="project_template/RPA_4기_프로젝트4.pdf"
-                download="Joo_project_4.pdf"
+                href="project_template/senior.pdf"
+                download="SM_project_senior.pdf"
                 >View Project</a
               ><br />
               <a href="">View Code</a>
@@ -408,8 +408,8 @@
                 컨셉트에 맞는 게시판을 구성
               </p>
               <a
-                href="project_template/RPA_4기_프로젝트5.pdf"
-                download="Joo_project_5.pdf"
+                href="project_template/missu.pptx"
+                download="SM_project_web_missu.pptx"
                 >View Project</a
               ><br />
               <a href="">View Code</a>
