--- a/index.html
+++ b/index.html
@@ -300,7 +300,16 @@
                 download="SM_project_car.pptx"
                 >View Project</a
               ><br />
-              <a href="">View Code</a>
+              <a
+                href="project_template/Servo_test.mp4"
+                download="Servo_test.mp4"
+                >View Servo_test</a
+              ><br />
+              <a
+                href="project_template/Result.mp4"
+                download="Result.mp4"
+                >View Result</a
+              >
             </div>
             <!-- End .project-info -->
           </div>
