--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               </h1>
               <h4 class="mb-3 py-3">
                 "팀원과의 소통"을 가장 중요시 생각하는
-                <br/>신입 (데이터 분석가) / (개발자) 김성민입니다.
+                <br/>김성민입니다.
               </h4>
               <p>
                 대외 공모전, 교육기관의 프로젝트를 진행해본 경험이 있습니다.<br/>
